maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:47: error: not found: value dir
    setDirection(dir)
                 ^