maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
   def aMurEst(x:Int,y:Int):Boolean={
     if(x<getMondeLargeur()-1 && !aMurOuest(x+1,y)){return false}
     return true
   }
  def aMurSud(x:Int,y:Int):Boolean={
    if(y<getMondeHauteur()-1 && !aMurNord(x,y+1)){return false}
    return true}
  
  
  
  def force(n:Int,x:Int,y:Int){
     if(getIndication(x,y)>n){setIndication(x,y,n)
                                  if(!aMurNord(x,y)){force(n+1,x,y-1)}
                                  if(!aMurOuest(x,y)){force(n+1,x-1,y)}
                                  if(!aMurEst(x,y)){force(n+1,x+1,y)}
                                  if(!aMurSud(x,y)){force(n+1,x,y+1)}}}
  var X=0
	var Y=0
  
  
  
  for(x<- 0 to getMondeLargeur()-1){
    for(y<- 0 to getMondeHauteur()-1){
      if(aBiscuit(x,y)){ X=x
                        Y=y}
    }
  }
  
  
  force(0,X,Y)
  
  
  do{
  var n:Int=litMessage().toInt
    var x=getX()
    var y=getY()
    if(!aMurNord(x,y) && getIndication(x,y-1)<n){var dir=Direction.NORD
                                             n=getIndication(x,y-1)}
    if(!aMurSud(x,y) && getIndication(x,y+1)<n){var dir=Direction.SUD
                                             n=getIndication(x,y+1)}
    if(!aMurOuest(x,y) && getIndication(x-1,y)<n){var dir=Direction.OUEST
                                             n=getIndication(x-1,y)}
    if(!aMurEst(x,y) && getIndication(x+1,y)<n){var dir=Direction.EST
                                             n=getIndication(x+1,y)}
    setDirection(dir)
    }while(!estSurBiscuit())
}